# codestare-distutil-tools

./: setup.cfg
src/codestare/tools/: __init__.py  cmd.py
