[metadata]
name = codestare-distutils-tools
author = Maximilian Schmidt
author_email = ga97lul@mytum.de
url = https://github.com/saggitar/codestare-distutils-tools.git
description = "Utility package for distutil extensions"
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = distutils, setuptools
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find_namespace:

[options.packages.find]
where = src

